Crash with more than 1 subdivision with the Multiresolution Modifier #64274

Closed
opened 2019-05-07 23:01:24 +02:00 by Ernesto Campese · 5 comments

System Information
Operating system: Windows 10 64bit
Graphics card: NVIDIA GeForce GTX 1060

Blender Version
Broken: 2.80.60, bfef3bce1a, 2019-05-07
Worked: not tested

Short description of error
After adding a Multiresolution modifier in sculpt mode, if you try to subdivide more than once the software crashes.

Exact steps for others to reproduce the error

  • Open a new scene.
  • Add a cube.
  • Go in sculpt mode.
  • Add amultiresolution modifier.

Click on subdivide button and exceed the 1.

**System Information** Operating system: Windows 10 64bit Graphics card: NVIDIA GeForce GTX 1060 **Blender Version** Broken: 2.80.60, bfef3bce1a93, 2019-05-07 Worked: not tested **Short description of error** After adding a Multiresolution modifier in sculpt mode, if you try to subdivide more than once the software crashes. **Exact steps for others to reproduce the error** - Open a new scene. - Add a cube. - Go in sculpt mode. - Add a**multiresolution** modifier. # Click on subdivide button and exceed the 1.

Added subscriber: @RavenMask

Added subscriber: @RavenMask

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Sergey Sharybin was assigned by Dalai Felinto 2019-05-08 03:21:11 +02:00

Basically multires_as_ccg(mmd, ctx, mesh, subdiv) returns NULL

Crash in applyModifier() at //source/blender/modifiers/intern/MOD_multires.c:191
Full backtrace: P969

Basically *multires_as_ccg(mmd, ctx, mesh, subdiv)* returns NULL Crash in `applyModifier() at //source/blender/modifiers/intern/MOD_multires.c:191` Full backtrace: [P969](https://archive.blender.org/developer/P969.txt)

This issue was referenced by 951396a9bd

This issue was referenced by 951396a9bdafec0b641196a108198f9fa63e16b8

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64274
No description provided.