Fix T64274: Crash with more than 1 subdivision with the Multiresolution Modifier

Update more relevant fields in the sculpt session. Really becoming annoying, but
was also annoying in the old code as well.